# peel

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  package.json  schema.json  test_output.txt  tmp_ffi.asm  tmp_ffi.c
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  docs.yml
crates/pepm/: Cargo.toml
crates/pepm/schemas/: pepm.tosd
crates/pepm/src/: main.rs
docs/: .gitignore  pyproject.toml  zensical.toml
docs/docs/: index.md
docs/docs/advanced/: concurrency.md  modern_features.md  pattern_matching.md  structs_enums.md  traits.md
docs/docs/std/: json.md  (+2 more)
examples/: advanced.pel  async_zen.pel  crypto.pel  ffi_test.pel  gui_demo.pel  hello.pel  math.pel  math_utils.pel  oop_test.pel  os_demo.pel  sqlite_demo.pel  test.pel  test_modules.pel  test_peeldoc.pel  test_pllint.pel  text_demo.pel
lib/wasm/: index.js  node.cjs  test.html
scripts/: build.bat  build.js  build.ps1  build.sh
src/: lib.rs  lsp.rs  main.rs
src/ast/: mod.rs  types.rs
src/checker/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/runtime/: interpreter.rs  mod.rs  value.rs
src/stdlib/: collections.rs  console.rs  json.rs  math.rs  mod.rs  sqlite.rs
tools/installation/: install.ps1  install.sh
tools/peeldoc/: Cargo.toml
tools/peeldoc/crates/peeldoc-cli/: Cargo.toml
tools/peeldoc/crates/peeldoc-cli/src/: main.rs
tools/peeldoc/crates/peeldoc-models/: Cargo.toml
tools/peeldoc/crates/peeldoc-models/src/: lib.rs
tools/peeldoc/crates/peeldoc-parser/: Cargo.toml
tools/peeldoc/crates/peeldoc-parser/src/: lib.rs
tools/peeldoc/crates/peeldoc-ssg/: Cargo.toml
tools/peeldoc/crates/peeldoc-ssg/src/: lib.rs
tools/peeldoc/crates/peeldoc-ssg/src/static/: script.js  style.css
tools/peeldoc/crates/peeldoc-ssg/src/templates/: index.html  layout.html  module.html
tools/peelformt/: Cargo.toml
tools/pllint/: Cargo.toml
tools/vscode/: README.md  language-configuration.json  package.json  tsconfig.json
(+36 files in other folders)
