[package]
name = "peel"
version = "1.1.0"
edition = "2024"

[dependencies]
logos = "0.14"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.9"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
colored = "2.1"
uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"
walkdir = "2.4"
zip = "2.1"
inquire = "0.7"
regex = "1.10"
async-recursion = "1.1"
async-trait = "0.1"
lazy_static = "1.5.0"
libloading = "0.9.0"
tower-lsp = "0.20.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[build-dependencies]
cc = "1.0"
