[package]
name = "pepm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.3"
toml = "0.7"
